top notice section complete

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,42 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lato:ital,wght@0,300;0,400;0,700;1,400&family=PT+Serif:wght@700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.color-oliv {
+  color: #256137;
+}
+
+.bg-oliv {
+  background-color: #256137;
+}
+
+.color-oliv-dark {
+  color: #3F6B4D;
+}
+
+.bg-oliv-dark {
+  background-color: #3F6B4D;
+}
+
+.color-white, .notice-board ul li {
+  color: #E7EBE8;
+}
+
+.bg-white {
+  background-color: #E7EBE8;
+}
+
+.color-dark-yellow {
+  color: #BB9338;
+}
+
+.bg-dark-yellow {
+  background-color: #BB9338;
+}
+
 .container {
   max-width: 1720px;
   width: 100%;
@@ -7,52 +45,88 @@
   padding: 0px 6px 0px 6px;
 }
 
-@media only screen and (max-width: 1400px) {
-  .container {
-    max-width: 1320px;
-  }
-}
-@media only screen and (max-width: 1200px) {
-  .container {
-    max-width: 1140px;
-  }
-}
-@media only screen and (max-width: 992px) {
-  .container {
-    max-width: 960px;
-  }
-}
-@media only screen and (max-width: 768px) {
-  .container {
-    max-width: 720px;
-  }
-}
-@media only screen and (max-width: 576px) {
+@media only screen and (min-width: 576px) {
   .container {
     max-width: 540px;
   }
 }
-.topnav {
-  background: #256137;
-  height: 84px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+
+@media only screen and (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
 }
-.topnav #nav-bar {
-  font-weight: 400;
+
+@media only screen and (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
+@media only screen and (min-width: 1400px) {
+  .container {
+    max-width: 1320px;
+  }
+}
+
+@media only screen and (min-width: 1800px) {
+  .container {
+    max-width: 1720px;
+  }
+}
+
+.notice-board ul .btn {
+  border-radius: 5px;
+  padding: 16px 32px;
+  border: none;
   font-family: "Lato", sans-serif;
+  font-weight: 600;
 }
-.topnav #nav-bar ul {
-  list-style-type: none;
-  display: flex;
-  flex-direction: row;
-  width: 45vw;
-  margin-left: auto;
+
+ul, li {
+  list-style: none;
 }
-.topnav #nav-bar ul li {
-  color: white;
+
+.notice-board {
+  background: #256137;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+@media only screen and (min-width: 768px) {
+  .notice-board ul {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+}
+.notice-board ul li {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+.notice-board ul li:first-child {
+  border-right: 2px solid;
+}
+.notice-board ul li:last-child {
+  margin-bottom: 0px;
+}
+@media only screen and (min-width: 768px) {
+  .notice-board ul li {
+    margin-bottom: 0px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .notice-board ul .btn {
+    padding-left: 20px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
