--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
   background-color: #3F6B4D;
 }
 
-.color-white, .notice-board ul li {
+.color-white, header, .notice-board ul li {
   color: #E7EBE8;
 }
 
@@ -127,6 +127,34 @@ ul, li {
   .notice-board ul .btn {
     padding-left: 20px;
   }
+}
+
+header {
+  background-color: black;
+  padding-top: 17px;
+  padding-bottom: 17px;
+}
+header .topmenu {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+header .topmenu .logo-side {
+  display: flex;
+  align-items: center;
+}
+header .topmenu .logo-side .logo {
+  width: 85px;
+  height: 83px;
+  padding-right: 23px;
+}
+header .topmenu .logo-side .logo img {
+  width: 100%;
+  height: 100%;
+}
+header .topmenu .logo-side .brand-name h2 {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 34px;
 }
 
 /*# sourceMappingURL=style.css.map */
