--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lato:ital,wght@0,300;0,400;0,700;1,400&family=PT+Serif:wght@700&display=swap");
+@font-face {
+  font-family: "century-gothic";
+  src: url("../../fonts/Century-Gothic.ttf");
+}
+.notice-board ul .btn {
+  border-radius: 5px;
+  padding: 16px 32px;
+  border: none;
+  font-family: "Lato", sans-serif;
+  font-weight: 600;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -81,15 +93,8 @@
   }
 }
 
-.notice-board ul .btn {
-  border-radius: 5px;
-  padding: 16px 32px;
-  border: none;
-  font-family: "Lato", sans-serif;
-  font-weight: 600;
-}
-
-ul, li {
+ul,
+li {
   list-style: none;
 }
 
@@ -142,19 +147,30 @@ header .topmenu {
 header .topmenu .logo-side {
   display: flex;
   align-items: center;
+  column-gap: 23px;
 }
 header .topmenu .logo-side .logo {
   width: 85px;
   height: 83px;
-  padding-right: 23px;
 }
 header .topmenu .logo-side .logo img {
   width: 100%;
   height: 100%;
 }
-header .topmenu .logo-side .brand-name h2 {
-  font-family: "Josefin Sans", sans-serif;
+header .topmenu .logo-side .brand-name h2,
+header .topmenu .logo-side .brand-name p {
+  font-family: "century-gothic";
   font-size: 34px;
+  line-height: 42px;
+  font-weight: 400;
+}
+header .topmenu .logo-side .brand-name h2 {
+  border-bottom: 1px solid #E7EBE8;
+}
+header .topmenu .logo-side .brand-name p {
+  font-size: 16px;
+  line-height: 20px;
+  margin-top: 5px;
 }
 
 /*# sourceMappingURL=style.css.map */
