some design in main section

--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,11 @@ li {
   }
 }
 
+.bg-img {
+  background-image: url(../img/main-bg-img.png);
+  background-size: cover;
+}
+
 header {
   background-color: black;
   padding-top: 17px;
@@ -205,6 +210,39 @@ header .topmenu .menu ul h1 {
   header .topmenu .menu ul h1 {
     display: none;
   }
+}
+
+.main-wrapper {
+  text-align: center;
+}
+.main-wrapper h3, .main-wrapper h1, .main-wrapper p {
+  font-family: "Lato", sans-serif;
+  font-size: 35px;
+  line-height: 42px;
+  font-weight: 400;
+  color: #E7EBE8;
+  padding-bottom: 55px;
+}
+.main-wrapper h1 {
+  font-family: "PT Serif", serif;
+  font-size: 60px;
+  line-height: 80px;
+  font-weight: 700;
+}
+.main-wrapper p {
+  font-family: "Lato", sans-serif;
+  font-size: 30px;
+  line-height: 37px;
+  font-weight: 500;
+  padding-bottom: 45px;
+}
+.main-wrapper button {
+  background-color: #256137;
+  color: white;
+  font-family: "Lato", sans-serif;
+  font-size: 25px;
+  line-height: 30px;
+  font-weight: 400;
 }
 
 /*# sourceMappingURL=style.css.map */
