--- a/scss/modules/_commonStyle.scss
+++ b/scss/modules/_commonStyle.scss
@@ -1,6 +1,7 @@
 button {
     background-color: transparent;
     border: none;
+    cursor: pointer;
 }
 %btn {
     border-radius: 5px;
@@ -10,7 +11,21 @@ button {
     font-weight: 600;
 }
 
+%btn-lato {
+    @extend %btn;
+    padding: 30px;
+    background-color: $c-oliv;
+    font-size: 25px;
+    font-weight: 400;
+    line-height: 30px;
+    border-radius: 8px;
+    color: $c-white;
+}
+
 ul,
 li {
     list-style: none;
 }
+
+
+
